--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,22 @@ h1{
     color: green;
     margin-top: 50px;
 }
+img{
+    width: 100%;
+}
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 10px 20px;
+    color: #000;
+    background: gray;
+    border-radius: 5px;
+    font-weight: 700;
+}
+
+/* ==================================
+    Inner Css
+================================== */
 #search_control {
     width: 500px;
     margin: 0 auto;
@@ -42,4 +58,22 @@ h1{
     color: white;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
+}
+#player_container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 15px;
+    width: 1150px;
+    margin: 0 auto;
+}
+.player{
+    background: lightgray;
+    border: 1px solid #000;
+    padding: 15px;
+    border-radius: 10px;
+}
+.social_links {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
 }
